// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing virtue action creator should create a virtue increase action with a non existing virtue 1`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "New virtue name",
  "type": "VIRTUE_INCREASE",
  "value": 3,
  "virtueType": "VIRTUE_SELFISH",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 1`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Honor",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_CHIVALROUS",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 2`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Benevolence",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_CHIVALROUS",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 3`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Righteousness",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_CHIVALROUS",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 4`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Loyalty",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_CHIVALROUS",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 5`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Force",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_CHIVALROUS",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 6`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Revenge",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_SELFISH",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 7`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Individualism",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_SELFISH",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 8`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Obsession",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_SELFISH",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 9`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Ruthlessness",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_SELFISH",
}
`;

exports[`Testing virtue action creator should create a virtue increase action with an existing virtue 10`] = `
Object {
  "cost": Object {
    "destiny": 0,
    "discountIdx": -1,
    "discountNewValue": 0,
    "entanglement": 0,
  },
  "name": "Ferocity",
  "type": "VIRTUE_INCREASE",
  "value": 10,
  "virtueType": "VIRTUE_SELFISH",
}
`;
